# nse_bhav

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  load_to_db.py  nse_bhav_copy.py  plans.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
static/: index.html
tests/: test_nse_bhav_copy.py
