[project]
name = "nse-bhav"
version = "0.1.0"
description = "Download NSE Bhav Copy (end-of-day market data) for all listed stocks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "tqdm>=4.64.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=7.4.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
